fixed an issue where spacing on IE browser was not positioning correctly.

--- a/client/src/styles/component/services.scss
+++ b/client/src/styles/component/services.scss
@@ -44,11 +44,6 @@
         font-size: 1.4rem;
         margin: 5px 0;
     }
-
-    @media (max-width: $tablet) {
-       
-            
-    }
 }
 
 .service-card{
